<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/donorLoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".view.ui.donor.DonorLoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_pass"
        app:layout_constraintVertical_chainStyle="packed" />


    <LinearLayout
        android:id="@+id/address_layout"
        style="@style/register"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_pass">

        <TextView
            android:id="@+id/login_address"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/pick_your_location"
            android:paddingStart="5dp"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>


    <TextView
        android:id="@+id/donor_text"
        style="@style/authText"
        android:fontFamily="@font/sniglet"
        android:text="@string/donor"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelines"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/login_name"
        style="@style/register"
        android:layout_marginTop="40dp"
        android:autofillHints="username"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelines" />

    <EditText
        android:id="@+id/login_phone"
        style="@style/register"
        android:autofillHints="username"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_name" />

    <EditText
        android:id="@+id/login_pass"
        style="@style/register"
        android:autofillHints="Password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_phone" />

    <Button
        android:id="@+id/login"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/button_anim"
        android:backgroundTint="@color/yellow"
        android:elevation="5dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_layout"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/donor_switch_login"
        style="@style/buttonStyle"
        android:background="@drawable/button_anim_circle"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/donor_switch_register"
        style="@style/buttonStyle"
        android:background="@drawable/button_anim_circle"
        android:paddingStart="15dp"
        android:text="@string/register"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>