<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/volunteerLoginActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/design_default_color_on_primary"
    tools:context=".view.ui.volunteer.VolunteerLoginActivity">

    <ImageView
        android:id="@+id/food_img"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:contentDescription="@string/food"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/volunteer_role" />

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:theme="@style/AppTheme.LightActionBar"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


    <TextView
        android:id="@+id/volunteer_text"
        style="@style/authText"
        android:fontFamily="@font/sniglet"
        android:text="@string/volunteer"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelines"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/login_name"
        style="@style/register"
        android:layout_marginTop="60dp"
        android:autofillHints="username"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelines" />

    <EditText
        android:id="@+id/login_phone"
        style="@style/register"
        android:autofillHints="username"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_name" />

    <Button
        android:id="@+id/login_register"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/button_anim"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="5dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/vol_switch_login"
        style="@style/buttonStyle"
        android:text="@string/login"
        android:background="@drawable/button_anim_circle_purple"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/vol_switch_register"
        style="@style/buttonStyle"
        android:paddingStart="15dp"
        android:background="@drawable/button_anim_circle_purple"
        android:text="@string/register"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />


</androidx.constraintlayout.widget.ConstraintLayout>