<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.MapsActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/relLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/cardview_light_background"
        android:elevation="10dp"
        tools:ignore="PrivateResource">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/autocomplete_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_address_city_or_zip_code" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/ic_gps"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/relLayout1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/locate_me"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_gps" />


    <Button
        android:id="@+id/confirm_location"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/yellow"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_anim"
        android:fontFamily="@font/comfortaa"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</RelativeLayout>
